--- a/manifest.json
+++ b/manifest.json
@@ -5,5 +5,5 @@
     "incognito": "split",
     "chrome_url_overrides": { "newtab": "redirect.html" },
     "manifest_version": 2,
-    "permissions": ["idle"]
+    "permissions": ["idle","activeTab"]
 }
