--- a/manifest.json
+++ b/manifest.json
@@ -5,5 +5,10 @@
     "incognito": "split",
     "chrome_url_overrides": { "newtab": "redirect.html" },
     "manifest_version": 2,
-    "permissions": ["idle","activeTab","https://hi9.uk/"]
+    "permissions": ["idle","activeTab","https://hi9.uk/"],  
+    "browser_action": {
+        "default_icon": "icon.png",
+        "default_popup": "popup.html"
+    }
+  },
 }
