--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,8 @@
     "browser_action": {
         "default_icon": "icon.png",
         "default_popup": "popup.html"
+    },
+    "background": {
+        "scripts": ["hi9.js"]
     }
 }
