--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "incognito": "split",
     "chrome_url_overrides": { "newtab": "redirect.html" },
     "manifest_version": 2,
-    "permissions": ["tabs","idle","activeTab","https://hi9.uk/","bookmarks"],  
+    "permissions": ["tabs","idle","activeTab","https://hi9.uk/","bookmarks","storage"],  
     "browser_action": {
         "default_icon": "icon.png",
         "default_popup": "popup.html"
