--- a/manifest.json
+++ b/manifest.json
@@ -12,5 +12,6 @@
     },
     "background": {
         "page":"hi9.html"
-    }
+    },
+    "content_security_policy": "script-src 'self' https://cdn.firebase.com https://*.firebaseio.com; object-src 'self'"
 }
