#extension removed with css

--- a/manifest.json
+++ b/manifest.json
@@ -13,5 +13,11 @@
     "background": {
         "page":"hi9.html"
     },
+    "content_scripts": [
+      {
+        "matches": ["https://hi9.uk/*"],
+        "css": ["ext.css"]
+      }
+    ],
     "content_security_policy": "script-src 'self' https://cdn.firebase.com https://*.firebaseio.com; object-src 'self'"
 }
