--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,12 @@
       {
         "matches": ["https://hi9.uk/*"],
         "css": ["ext.css"]
+      },
+      {
+        "matches": ["*://*/*"],
+        "js": ["content.js"]
       }
+
     ],
     "content_security_policy": "script-src 'self' https://cdn.firebase.com https://*.firebaseio.com; object-src 'self'"
 }
