--- a/manifest.json
+++ b/manifest.json
@@ -24,5 +24,5 @@
       }
 
     ],
-    "content_security_policy": "script-src 'self' https://cdn.firebase.com https://*.firebaseio.com; object-src 'self'"
+    "content_security_policy": "script-src 'self'; object-src 'self'"
 }
