--- a/manifest.json
+++ b/manifest.json
@@ -5,16 +5,12 @@
     "incognito": "split",
     "chrome_url_overrides": { "newtab": "redirect.html" },
     "manifest_version": 2,
-    "permissions": ["identity", "identity.email", "tabs", "idle", "activeTab", "https://*/","http://*/", "bookmarks", "storage"],
+    "permissions": ["tabs", "activeTab", "https://*/","http://*/", "bookmarks", "storage"],
     "browser_action": {
         "default_icon": "icon.png",
         "default_popup": "popup.html"
     },
     "content_scripts": [
-      {
-        "matches": ["https://hi9.uk/*"],
-        "css": ["ext.css"]
-      },
       {
         "matches": ["*://*/*"],
         "js": ["content.js"]
