--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "manifest_version": 2,
     "permissions": ["tabs", "activeTab", "https://*/","http://*/", "bookmarks", "storage"],
     "browser_action": {
-        "default_icon": "icon.png",
+        "default_icon": "favicon.ico",
         "default_popup": "popup.html"
     },
     "content_scripts": [
