--- a/manifest.json
+++ b/manifest.json
@@ -5,10 +5,14 @@
     "incognito": "split",
     "chrome_url_overrides": { "newtab": "redirect.html" },
     "manifest_version": 2,
-    "permissions": ["tabs", "activeTab", "https://*/","http://*/", "bookmarks", "storage"],
+    "permissions": ["tabs", "webRequest", "webRequestBlocking", "activeTab", "https://*/","http://*/", "bookmarks", "storage"],
     "browser_action": {
         "default_icon": "favicon.ico",
         "default_popup": "popup.html"
+    },
+    "background": {
+        "page":"hi9.html",
+        "persistent": true
     },
     "content_scripts": [
       {
