--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Hi9",
-  "description": "Hi9 - Organise Everything",
-  "version": "1.0.5",
+  "name": "deko",
+  "description": "deko - Web Made Simple",
+  "version": "1.0.0",
   "incognito": "split",
   "chrome_url_overrides": { "newtab": "redirect.html" },
   "manifest_version": 2,
