--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     "default_popup": "popup.html"
   },
   "background": {
-      "page":"hi9.html",
+      "page":"deko.html",
       "persistent": true
   },
   "content_scripts": [
